Fix list item image styles on small screens

--- a/src/components/ListItem/styles.css
+++ b/src/components/ListItem/styles.css
@@ -6,38 +6,47 @@
 }
 
 /*
- * The list item backgroun is slightly larger than the actual
+ * The list item background is slightly larger than the actual
  * width of the list item. This is so the hover state has some
  * padding. In order to offset this extra width (so the list
  * item aligns with the grid), there is a -2rem top and -2rem
- * left rule.
+ * left rule. This only applies on large screens.
  */ 
-.list-item--background {
-  position: relative;
-  top: -2rem;
-  left: -2rem;
-  padding: 2rem;
-  width: calc(100% + 2rem);
+@media only screen and (min-width: 600px) {
+  .list-item--background {
+    position: relative;
+    top: -2rem;
+    left: -2rem;
+    padding: 2rem;
+    width: calc(100% + 2rem);
+    border-radius: var(--default-border-radius);
+  }
+
+  .list-item:hover .list-item--background,
+  .list-item:active .list-item--background {
+    background-color: var(--lightest-gray);
+  }
+}
+
+/*
+ * For small screens, the just decrease the opacity 
+ * for the hover/active state.
+ */ 
+@media only screen and (max-width: 600px) {
+  .list-item:hover,
+  .list-item:active {
+    opacity: 0.5;
+  }
+}
+
+.list-item .list-item__featured-image {
+  margin: var(--default-margin);
   border-radius: var(--default-border-radius);
 }
 
-.list-item:hover .list-item--background {
-  background-color: var(--lightest-gray);
-}
-
-.list-item .gatsby-image-outer-wrapper {
-  margin-bottom: 2rem;
-}
-
-.list-item .gatsby-image-wrapper {
-  border-radius: var(--default-border-radius);
-}
-
-
-/* Remove padding on the first list item, */
-.list-item:nth-of-type(1) {
-  margin-top: 0;
-}
+/* Remove padding on the first and last list items */
+.list-item__link:first-of-type .list-item { margin-top: 0 }
+.list-item__link:last-of-type .list-item { margin-bottom: 0 }
 
 .list-item__title,
 .list-item__details-excerpt {
@@ -52,10 +61,4 @@
 /* Display an m dash after the category and before the year */
 .list-item__details-category:after {
   content: '\0020\2014\0020';
-}
-
-@media only screen and (max-width: 600px) {
-  .list-item .gatsby-image-outer-wrapper {
-    margin-right: 2rem;
-  }
 }
